Add internship experience sections with icons and animation

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="cols cols0">
         <span class="topline">Hello,<br> I am Arpit Gupta</span>
         <h2 style="font-size: 20px;">And I'm a <br><span class="multiText"></span></h2>
-        <p>2 Years Experienced Software Engineer with a demonstrated history of working as a Software Developer in the telecommunications industry. Skilled in Java 8, J2EE, Oracle, Spring, SQL, REST, XML, SOAP, Unix, and Linux.</p>
+        <p>I'm Arpit Gupta, a Computer Science graduate with hands-on experience in web development using HTML, CSS, JavaScript, React, and Spring Boot. I'm passionate about building scalable full-stack applications and continuously learning advanced technologies like Machine Learning and NLP.</p>
         <div class="btns">
           <a href="https://drive.google.com/file/d/1az4o9xM-jCbdyqPQQswgw41mHCms85Lx/view" download="Arpit.pdf" class="btn">
            <button>Download CV <i class="fa fa-download"></i></button>
@@ -68,7 +68,7 @@
     <div class="about-content">
       <h1>About <span class="multiText">Me</span></h1>
       <h2>Backend Developer</h2>
-      <p>Working as Software Engineer in the OMS (Ordering Management System), an Amdocs product for telecom providers. Responsible for design, development, debugging, API development, bug fixing, and writing production-ready code.</p>
+      <p>Aspiring Full-Stack Developer with strong knowledge of Java, Spring Boot, React, and problem-solving. Experienced in building real-world projects like quiz apps, travel booking platforms, and expense trackers. Passionate about creating scalable, user-friendly applications and continuously learning new technologies.</p>
       <div class="btns rdm">
         <button>Read More</button>
       </div>
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="course-col">
         <h3>WEB DEVELOPER <span class="multiText"><i class="fa fa-code"></i></span></h3>
-        <p>A results-driven Web Developer with 2+ years of experience in software engineering and web development. Proven track record of developing interactive websites and leveraging SEO and user-centered design to grow traffic.</p>
+        <p>A passionate Web Developer with hands-on experience in building responsive web applications using HTML, CSS, JavaScript, React, and Spring Boot. Skilled in problem-solving and backend development with Java.</p>
       </div>
       <div class="course-col">
         <h3>SOFTWARE DEVELOPER <span class="multiText"><i class="fa fa-pen-ruler"></i></span></h3>
@@ -93,9 +93,37 @@
       </div>
     </div>
   </section>
+  <section class="experience">
+         <h1 class="title" >My <span class="multiText">Experience</span></h1>
+    <div class="timeline-container">
+
+
+    <div class="experience1">
+      <div class="experience-header">
+        <img src="https://cdn-icons-png.flaticon.com/512/11743/11743795.png" alt="Frontend Icon" class="role-icon" style="width: 80px;height: 80px;">
+     </div>
+       <div class="inner-experience">
+      <h3>Frontend Developer Intern</h3>
+      <span>Simpli Lab, Noida | Dec 2023 – Feb 2024</span>
+      <p>Worked with HTML, CSS, and JavaScript to build responsive web interfaces. Contributed to UI design and component optimization for better user experience.</p>
+      </div>
+    </div>
+
+    <div class="experience1">
+      <div class="experience-header">
+        <img src="https://cdn-icons-png.flaticon.com/512/11743/11743795.png" alt="Frontend Icon" class="role-icon" style="width: 80px;height: 80px;">
+      </div>
+    <div class="inner-experience">
+      <h3>Backend Developer Intern</h3>
+      <span>CodeAxis Pvt. Ltd. | Nov 2024 – Jan 2025</span>
+      <p>Worked on backend development using Java and Spring Boot. Built REST APIs, database integrations, and contributed to deployment tasks.</p>
+    </div>
+    </div>
+  </div>
+  </section>
 
   <!-- Contact Section -->
-  <section class="Blog" id="feed">
+  <section class="Blog" id="feed" style="width: 1300px; text-align: center;margin-left: 13%; background-color: rgb(242, 238, 238);border-radius: 20px;">
     <div class="comment-box">
       <h1>Contact Me</h1>
       <form class="comment-form">
